force-app/main/default/objects/OpportunityLineItem/fields/C1_eligible_age__c.field-meta.xml
<CustomField>
    <fullName>C1_eligible_age__c</fullName>
    <label>Eligibilité de l&apos;âge</label>
    <length>35</length>
    <type>Text</type>
</CustomField>