force-app/main/default/objects/OpportunityLineItem/fields/C3_eligible_niveau_xp_pro__c.field-meta.xml
<CustomField>
    <fullName>C3_eligible_niveau_xp_pro__c</fullName>
    <label>Eligibilité du niveau d&apos;expérience pro</label>
    <length>35</length>
    <type>Text</type>
</CustomField>