force-app/main/default/objects/OpportunityLineItem/fields/C4_eligible_domaine_d_tudes__c.field-meta.xml
<CustomField>
    <fullName>C4_eligible_domaine_d_tudes__c</fullName>
    <label>Eligibilité du domaine d&apos;études</label>
    <length>35</length>
    <type>Text</type>
</CustomField>