force-app/main/default/objects/OpportunityLineItem/fields/Champ_syst_me_pour_clonage__c.field-meta.xml
<CustomField>
    <fullName>Champ_syst_me_pour_clonage__c</fullName>
    <label>Champ système pour clonage</label>
    <length>20</length>
    <type>Text</type>
</CustomField>