force-app/main/default/objects/OpportunityLineItem/fields/Code_OLI__c.field-meta.xml
<CustomField>
    <fullName>Code_OLI__c</fullName>
    <externalId>true</externalId>
    <label>Code_OLI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>