force-app/main/default/objects/OpportunityLineItem/fields/Code_PO__c.field-meta.xml
<CustomField>
    <fullName>Code_PO__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Code_PO</label>
    <type>AutoNumber</type>
</CustomField>