force-app/main/default/objects/OpportunityLineItem/fields/CodeAgresso_Poste_Opportunite__c.field-meta.xml
<CustomField>
    <fullName>CodeAgresso_Poste_Opportunite__c</fullName>
    <description>Ce champ est remplit automatiquement en se basant sur &quot; RecordType + Exercice + Compteur Opp&quot;</description>
    <label>Code Agresso Poste Opportunité</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>