force-app/main/default/objects/OpportunityLineItem/fields/Compte_opportunite__c.field-meta.xml
<CustomField>
    <fullName>Compte_opportunite__c</fullName>
    <formula>Opportunity.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compte</label>
    <type>Text</type>
</CustomField>