force-app/main/default/objects/OpportunityLineItem/fields/Compteur_Poste_Opp__c.field-meta.xml
<CustomField>
    <fullName>Compteur_Poste_Opp__c</fullName>
    <description>Compteur poste opportunité</description>
    <displayFormat>{000000}</displayFormat>
    <label>Compteur Poste Opp</label>
    <type>AutoNumber</type>
</CustomField>