force-app/main/default/objects/OpportunityLineItem/fields/Date_de_debut_de_session_f__c.field-meta.xml
<CustomField>
    <fullName>Date_de_debut_de_session_f__c</fullName>
    <formula>Session_de_formation__r.Date_de_debut_de_session__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Début</label>
    <type>Date</type>
</CustomField>