force-app/main/default/objects/OpportunityLineItem/fields/DatePaiement__c.field-meta.xml
<CustomField>
    <fullName>DatePaiement__c</fullName>
    <label>Date de paiement</label>
    <type>Date</type>
</CustomField>