force-app/main/default/objects/OpportunityLineItem/fields/EtatPaiement__c.field-meta.xml
<CustomField>
    <fullName>EtatPaiement__c</fullName>
    <label>Etat du paiement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payé</fullName>
            </value>
            <value>
                <fullName>Non payé</fullName>
            </value>
            <value>
                <fullName>Annulé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>