force-app/main/default/objects/OpportunityLineItem/fields/Famille__c.field-meta.xml
<CustomField>
    <fullName>Famille__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Famille__c)</formula>
    <label>Famille</label>
    <type>Text</type>
</CustomField>