force-app/main/default/objects/OpportunityLineItem/fields/Fin__c.field-meta.xml
<CustomField>
    <fullName>Fin__c</fullName>
    <formula>Session_de_formation__r.Date_de_fin_de_session__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fin</label>
    <type>Date</type>
</CustomField>