force-app/main/default/objects/OpportunityLineItem/fields/Fonction__c.field-meta.xml
<CustomField>
    <fullName>Fonction__c</fullName>
    <formula>TEXT(Opportunity.Contact_central__r.Fonctions__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fonction</label>
    <type>Text</type>
</CustomField>