force-app/main/default/objects/OpportunityLineItem/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Court</fullName>
            </value>
            <value>
                <fullName>Parcours</fullName>
            </value>
            <value>
                <fullName>Certificat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>