force-app/main/default/objects/OpportunityLineItem/fields/Gamme__c.field-meta.xml
<CustomField>
    <fullName>Gamme__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Family)</formula>
    <label>Gamme</label>
    <type>Text</type>
</CustomField>