force-app/main/default/objects/OpportunityLineItem/fields/Id_entree_de_catalogue__c.field-meta.xml
<CustomField>
    <fullName>Id_entree_de_catalogue__c</fullName>
    <formula>PricebookEntryId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id entrée de catalogue</label>
    <type>Text</type>
</CustomField>