force-app/main/default/objects/OpportunityLineItem/fields/Id_Opportunite__c.field-meta.xml
<CustomField>
    <fullName>Id_Opportunite__c</fullName>
    <formula>Opportunity.X18caracter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Opportunité</label>
    <type>Text</type>
</CustomField>