force-app/main/default/objects/OpportunityLineItem/fields/InterfaceExternalId__c.field-meta.xml
<CustomField>
    <fullName>InterfaceExternalId__c</fullName>
    <externalId>true</externalId>
    <label>InterfaceExternalId Poste</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>