force-app/main/default/objects/OpportunityLineItem/fields/JetonPaiement__c.field-meta.xml
<CustomField>
    <fullName>JetonPaiement__c</fullName>
    <label>Id paiement</label>
    <length>50</length>
    <type>Text</type>
</CustomField>