force-app/main/default/objects/OpportunityLineItem/fields/Lieu_de_formation__c.field-meta.xml
<CustomField>
    <fullName>Lieu_de_formation__c</fullName>
    <label>Lieu de formation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>