force-app/main/default/objects/OpportunityLineItem/fields/ModePaiement__c.field-meta.xml
<CustomField>
    <fullName>ModePaiement__c</fullName>
    <label>Mode de paiement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CB online</fullName>
            </value>
            <value>
                <fullName>Facture</fullName>
            </value>
            <value>
                <fullName>Gratuit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>