force-app/main/default/objects/OpportunityLineItem/fields/MontantPaye__c.field-meta.xml
<CustomField>
    <fullName>MontantPaye__c</fullName>
    <label>Montant payé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>