force-app/main/default/objects/OpportunityLineItem/fields/Motifs_de_non_eligibilite__c.field-meta.xml
<CustomField>
    <fullName>Motifs_de_non_eligibilite__c</fullName>
    <label>Motifs de non éligibilité</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Age trop élevé</fullName>
            </value>
            <value>
                <fullName>Niveau d’études insuffisant</fullName>
            </value>
            <value>
                <fullName>Expérience professionnelle incohérente</fullName>
            </value>
            <value>
                <fullName>Domaine d’études incohérent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>