force-app/main/default/objects/OpportunityLineItem/fields/NB_d_heure_et_jour_calculer__c.field-meta.xml
<CustomField>
    <fullName>NB_d_heure_et_jour_calculer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ce champ se coche par WF : pour tous les produits non Pack et les produits Pack ayant la case à cocher &quot;à la carte&quot;</description>
    <label>NB d&apos;heure et jour à calculer</label>
    <type>Checkbox</type>
</CustomField>