force-app/main/default/objects/OpportunityLineItem/fields/Nom_du_Contact__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_Contact__c</fullName>
    <formula>Opportunity.Contact_central__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom du Contact</label>
    <type>Text</type>
</CustomField>