force-app/main/default/objects/OpportunityLineItem/fields/Nombre_d_heures__c.field-meta.xml
<CustomField>
    <fullName>Nombre_d_heures__c</fullName>
    <label>Nombre d&apos;heures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>