force-app/main/default/objects/OpportunityLineItem/fields/Nombre_de_jours__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_jours__c</fullName>
    <label>Nombre de jours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>