force-app/main/default/objects/OpportunityLineItem/fields/NomPayeur__c.field-meta.xml
<CustomField>
    <fullName>NomPayeur__c</fullName>
    <label>Nom du payeur</label>
    <length>50</length>
    <type>Text</type>
</CustomField>