force-app/main/default/objects/OpportunityLineItem/fields/OCTA__c.field-meta.xml
<CustomField>
    <fullName>OCTA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OCTA</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Est_un_OCTA__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Poste d&apos;opportunité</relationshipLabel>
    <relationshipName>Poste_d_opportunit</relationshipName>
    <type>Lookup</type>
</CustomField>