force-app/main/default/objects/OpportunityLineItem/fields/Ouverture_candidature__c.field-meta.xml
<CustomField>
    <fullName>Ouverture_candidature__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cette coche permet de signaler le déclenchement sur le site EML 3 l’ouverture du dossier de candidature. Valable également pour formation continue longue.</description>
    <label>Ouverture candidature</label>
    <type>Checkbox</type>
</CustomField>