force-app/main/default/objects/OpportunityLineItem/fields/Pack_la_carte__c.field-meta.xml
<CustomField>
    <fullName>Pack_la_carte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pack à la carte</label>
    <type>Checkbox</type>
</CustomField>