force-app/main/default/objects/OpportunityLineItem/fields/Pr_nom_du_contact__c.field-meta.xml
<CustomField>
    <fullName>Pr_nom_du_contact__c</fullName>
    <formula>Opportunity.Contact_central__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prénom du contact</label>
    <type>Text</type>
</CustomField>