force-app/main/default/objects/OpportunityLineItem/fields/Prix_total__c.field-meta.xml
<CustomField>
    <fullName>Prix_total__c</fullName>
    <formula>IF( Remise_en_valeur__c  =  0 ,  TotalPrice , ( UnitPrice - Remise_en_valeur__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>