force-app/main/default/objects/OpportunityLineItem/fields/ProduitFiltreSession__c.field-meta.xml
<CustomField>
    <fullName>ProduitFiltreSession__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProduitFiltreSession</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Poste d&apos;opportunité</relationshipLabel>
    <relationshipName>Poste_d_opportunit</relationshipName>
    <type>Lookup</type>
</CustomField>