force-app/main/default/objects/OpportunityLineItem/fields/Recu_ERP_Affaire__c.field-meta.xml
<CustomField>
    <fullName>Recu_ERP_Affaire__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Champ qui sera rempli par le web service EMLYON pour définir les postes opportunités (formation courte et programme long diplômant) à envoyer vers à AGRESSO</description>
    <label>Recu ERP Affaire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>