force-app/main/default/objects/OpportunityLineItem/fields/Remise_en_valeur__c.field-meta.xml
<CustomField>
    <fullName>Remise_en_valeur__c</fullName>
    <label>Remise en valeur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>