force-app/main/default/objects/OpportunityLineItem/fields/RemplissageDossierCANEL__c.field-meta.xml
<CustomField>
    <fullName>RemplissageDossierCANEL__c</fullName>
    <label>Remplissage Dossier CANEL</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>