force-app/main/default/objects/OpportunityLineItem/fields/Session_de_formation__c.field-meta.xml
<CustomField>
    <fullName>Session_de_formation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session de formation</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.ProduitFiltreSession__c</field>
            <operation>equals</operation>
            <valueField>Session__c.Produits__c</valueField>
        </filterItems>
        <filterItems>
            <field>Session__c.Statut__c</field>
            <operation>notEqual</operation>
            <value>Complète</value>
        </filterItems>
        <filterItems>
            <field>Session__c.Statut__c</field>
            <operation>notEqual</operation>
            <value>Abandonnée</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Liste prévisionnelle inscrit</relationshipLabel>
    <relationshipName>Poste_d_opportunit</relationshipName>
    <type>Lookup</type>
</CustomField>