force-app/main/default/objects/OpportunityLineItem/fields/session_de_selection__c.field-meta.xml
<CustomField>
    <fullName>session_de_selection__c</fullName>
    <inlineHelpText>CANEL</inlineHelpText>
    <label>Session de sélection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>