force-app/main/default/objects/OpportunityLineItem/fields/Session_Formation_pour_WF__c.field-meta.xml
<CustomField>
    <fullName>Session_Formation_pour_WF__c</fullName>
    <formula>Session_de_formation__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Formation pour WF</label>
    <type>Text</type>
</CustomField>