force-app/main/default/objects/OpportunityLineItem/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <formula>Session_de_formation__r.x18caracteres__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Id</label>
    <type>Text</type>
</CustomField>