force-app/main/default/objects/OpportunityLineItem/fields/Session_selection_ancienne_valeur__c.field-meta.xml
<CustomField>
    <fullName>Session_selection_ancienne_valeur__c</fullName>
    <label>Session selection ancienne valeur</label>
    <length>200</length>
    <type>Text</type>
</CustomField>