force-app/main/default/objects/OpportunityLineItem/fields/SF_Date_derniere_modification__c.field-meta.xml
<CustomField>
    <fullName>SF_Date_derniere_modification__c</fullName>
    <label>SF Date derniere modification</label>
    <type>DateTime</type>
</CustomField>