force-app/main/default/objects/OpportunityLineItem/fields/SS_Date_derniere_modification__c.field-meta.xml
<CustomField>
    <fullName>SS_Date_derniere_modification__c</fullName>
    <label>SS Date derniere modification</label>
    <type>DateTime</type>
</CustomField>