force-app/main/default/objects/OpportunityLineItem/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <formula>TEXT(Opportunity.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut</label>
    <type>Text</type>
</CustomField>