force-app/main/default/objects/OpportunityLineItem/fields/Statut_candidature__c.field-meta.xml
<CustomField>
    <fullName>Statut_candidature__c</fullName>
    <label>Statut Candidature CANEL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>.</fullName>
            </value>
            <value>
                <fullName>Non-recevable (Hors profil)</fullName>
            </value>
            <value>
                <fullName>Abandon</fullName>
            </value>
            <value>
                <fullName>Dossier débuté</fullName>
            </value>
            <value>
                <fullName>Dossier avancé</fullName>
            </value>
            <value>
                <fullName>En finalisation</fullName>
            </value>
            <value>
                <fullName>Candidat</fullName>
            </value>
            <value>
                <fullName>Admissible</fullName>
            </value>
            <value>
                <fullName>Non-admis(sible)</fullName>
            </value>
            <value>
                <fullName>Abandon candidature</fullName>
            </value>
            <value>
                <fullName>Admis</fullName>
            </value>
            <value>
                <fullName>Admis sous condition</fullName>
            </value>
            <value>
                <fullName>Inscrit</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Renonciation</fullName>
            </value>
            <value>
                <fullName>Incohérent</fullName>
            </value>
            <value>
                <fullName>Non admissible</fullName>
            </value>
            <value>
                <fullName>Non admis</fullName>
            </value>
            <value>
                <fullName>Admis board 1</fullName>
            </value>
            <value>
                <fullName>Admis board 2</fullName>
            </value>
            <value>
                <fullName>Non admis board 1</fullName>
            </value>
            <value>
                <fullName>Non admis board 2</fullName>
            </value>
            <value>
                <fullName>Pré-inscrit</fullName>
            </value>
            <value>
                <fullName>Renonciation après paiement</fullName>
            </value>
            <value>
                <fullName>Abandon après candidature</fullName>
            </value>
            <value>
                <fullName>Abandon avant oral</fullName>
            </value>
            <value>
                <fullName>En liste d&apos;attente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>