force-app/main/default/objects/OpportunityLineItem/fields/Statut_dossier__c.field-meta.xml
<CustomField>
    <fullName>Statut_dossier__c</fullName>
    <label>Statut Dossier CANEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>