force-app/main/default/objects/OpportunityLineItem/fields/Type_produit__c.field-meta.xml
<CustomField>
    <fullName>Type_produit__c</fullName>
    <description>Champ permettant de stocker le type d&apos;enregistrement du produit. Il est nécessaire de la stocker pour des raisons techniques : pour les parcours un roll-up sur l&apos;opportunité permet de savoir si on est dans le cas d&apos;un parcours.</description>
    <label>Type produit</label>
    <length>80</length>
    <type>Text</type>
</CustomField>