force-app/main/default/objects/OpportunityLineItem/fields/X18caracter__c.field-meta.xml
<CustomField>
    <fullName>X18caracter__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18caracter</label>
    <type>Text</type>
</CustomField>