force-app/main/default/objects/OpportunityLineItem/validationRules/Ouverture_candidature_non_modifiable.validationRule-meta.xml
<ValidationRule>
    <fullName>Ouverture_candidature_non_modifiable</fullName>
    <active>true</active>
    <description>Si le produit de l&apos;opportunité n&apos;est pas un produit de type &quot;selection&quot;, alors les profils EML ne pourront pas modifier le champ &quot;ouverture candidature&quot; (case à cocher).</description>
    <errorConditionFormula>AND 
(ISCHANGED(Ouverture_candidature__c), 
  $Profile.Name = &quot;EML&quot;, 
   Product2.RecordType.DeveloperName &lt;&gt; &quot;Selection&quot;)</errorConditionFormula>
    <errorDisplayField>Ouverture_candidature__c</errorDisplayField>
    <errorMessage>Vous ne pouvez pas modifier ce champ car le produit de l&apos;opportunité n&apos;est pas de type &quot;Selection&quot;</errorMessage>
</ValidationRule>